--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,1 +1,10 @@
-/*# sourceMappingURL=index.css.map */
+.pp {
+  display: flex;
+  justify-content: center;
+  font-size: 50px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-style: italic;
+  margin-top: 150px;
+  background-color: antiquewhite;
+  box-shadow: 10px 10px 20px 5px red;
+}/*# sourceMappingURL=index.css.map */
